# fastapi-telegram-bot-example

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
src/: app.py  lifespan.py  main.py
src/config/: settings.py
src/core/: bot.py
src/core/callback_data/: __init__.py  example.py
src/core/handlers/: __init__.py  example.py  start.py
src/core/keyboards/inline/: __init__.py  example.py
src/core/keyboards/reply/: __init__.py  start.py
src/core/states/: __init__.py  example.py
src/utils/: __init__.py  logger.py
